Depth prediction for fg_bg data set

--- a/S15/DenseDepth.ipynb
+++ b/S15/DenseDepth.ipynb
@@ -5880,180 +5880,15 @@
             "Processed batch 360 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_360.zip. Time Taken: 0:00:23.483915\n",
             "Processed batch 361 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_361.zip. Time Taken: 0:00:23.625734\n",
             "Processed batch 362 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_362.zip. Time Taken: 0:00:23.330295\n",
-            "Processed batch 363 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_363.zip. Time Taken: 0:00:23.476656\n"
+            "Processed batch 363 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_363.zip. Time Taken: 0:00:23.476656\n",
+            "Processed batch 364 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_364.zip. Time Taken: 0:00:23.260180\n",
+            "Processed batch 365 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_365.zip. Time Taken: 0:00:23.384124\n",
+            "Processed batch 366 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_366.zip. Time Taken: 0:00:23.022062\n",
+            "Processed batch 367 into /content/drive/My Drive/Colab Notebooks/workspace/data/Assignment15/DepthMask/output/fg_bg_depth_367.zip. Time Taken: 0:00:23.322791\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sV8M9KSEuCbM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CjfnBxX60Zyr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "g561NHfk4edk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sNk5ZIgK6w1j",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BY_dRJOa9DU3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eoRkV3GY_V0M",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NGdMbYl6BoTg",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uVMoKwuqD67k",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8qhkEeW3GNaz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4dDp4ZDUIf2Y",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rAZxLY3LKyQ5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W1flTfzFNEwO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hHPVUldaPXPj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
